--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,3 +1,13 @@
+body{
+    margin: 0;
+    padding: 0;
+
+    background-color: #303030;
+}
+
 #paintarea{
-    border: 1px solid blue;
+    background-color: #DCDCDC;
+
+    margin-left: 50px;
+    margin-top: 20px;
 }
