--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -2,11 +2,11 @@ body{
     margin: 0;
     padding: 0;
 
-    background-color: #303030;
+    background-color: #2C3E50;
 }
 
 #paintarea{
-    background-color: #DCDCDC;
+    background-color: #ECF0F1;
 
     margin-left: 50px;
     margin-top: 20px;
